--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -6,7 +6,9 @@ encoding//lib/mainpage.py=utf-8
 encoding//lib/myinfo.py=utf-8
 encoding//lib/mymsgpage.py=utf-8
 encoding//lib/setting.py=utf-8
-encoding//testcases/regist.py=utf-8
-encoding//testcases/test_contact.py=utf-8
+encoding//testcases/contact.py=utf-8
 encoding//testcases/test_login.py=utf-8
+encoding//testcases/test_regist.py=utf-8
 encoding//testcases/test_sendmsg.py=utf-8
+encoding//testcases/wdf.py=utf-8
+encoding/run_case.py=utf-8
